# src/dto/reply-dto.ts
@@ -1,7 +1,7 @@
 export interface createReplyDTO {
     content: string;
-    image?: string; 
-    likes?: number; 
-    threadId: number;
+    image?: string | null; 
+    likes?: number;  // If likes is not needed, remove it
+    threadId: number; // Ensure threadId is a number, not string
     userId: number;
 }
