# swagger/swagger-output.json
@@ -257,6 +257,9 @@
           "200": {
             "description": "OK"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Not Found"
           },
@@ -318,7 +321,7 @@
         }
       }
     },
-    "/api/v1/auth/logout": {
+    "/api/v1/auth/forgot-password": {
       "post": {
         "description": "",
         "responses": {
@@ -337,9 +340,48 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/logoutDTO"
+                "$ref": "#/components/schemas/ForgotPasswordDTO"
               }
             }
+          }
+        }
+      }
+    },
+    "/api/v1/auth/reset-password": {
+      "post": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ResetPasswordDTO"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/auth/logout": {
+      "post": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
@@ -452,7 +494,17 @@
           {
             "bearerAuth": []
           }
-        ]
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "$ref": "#/components/schemas/CreateThreadDTO"
+              }
+            }
+          }
+        }
       }
     },
     "/api/v1/thread/{id}": {
@@ -595,7 +647,7 @@
       }
     },
     "/api/v1/threads/{threadId}/unlike": {
-      "delete": {
+      "post": {
         "description": "",
         "parameters": [
           {
@@ -608,31 +660,15 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
-          },
           "401": {
             "description": "Unauthorized"
-          },
-          "500": {
-            "description": "Internal Server Error"
           }
         },
         "security": [
           {
             "bearerAuth": []
           }
-        ],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/RemoveThreadLikeDTO"
-              }
-            }
-          }
-        }
+        ]
       }
     },
     "/api/v1/followers": {
@@ -789,11 +825,18 @@
           }
         ],
         "requestBody": {
-          "required": true,
           "content": {
-            "multipart/form-data": {
+            "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/CreateReplyDTO"
+                "type": "object",
+                "properties": {
+                  "threadId": {
+                    "example": "any"
+                  },
+                  "rest": {
+                    "example": "any"
+                  }
+                }
               }
             }
           }
@@ -889,31 +932,15 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
-          },
           "401": {
             "description": "Unauthorized"
-          },
-          "500": {
-            "description": "Internal Server Error"
           }
         },
         "security": [
           {
             "bearerAuth": []
           }
-        ],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/RemoveReplyLikeDTO"
-              }
-            }
-          }
-        }
+        ]
       }
     }
   },
@@ -967,7 +994,10 @@
           "replyId": {
             "type": "integer"
           }
-        }
+        },
+        "required": [
+          "replyId"
+        ]
       },
       "RemoveReplyLikeDTO": {
         "type": "object",
@@ -1076,6 +1106,34 @@
         },
         "required": [
           "fullName"
+        ]
+      },
+      "ResetPasswordDTO": {
+        "type": "object",
+        "properties": {
+          "token": {
+            "type": "string"
+          },
+          "passwordUsers": {
+            "type": "string",
+            "format": "passwordUsers"
+          }
+        },
+        "required": [
+          "token",
+          "passwordUsers"
+        ]
+      },
+      "ForgotPasswordDTO": {
+        "type": "object",
+        "properties": {
+          "email": {
+            "type": "string",
+            "format": "email"
+          }
+        },
+        "required": [
+          "email"
         ]
       },
       "LoginDTO": {
